[tool.poetry]
name = "deep-q-learning"
version = "0.1.0"
description = ""
authors = ["machkouroke <machkour20.mo1@gmail.com>"]
readme = "README.md"
packages = [{include = "deep_q_learning"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
